--- a/publication.html
+++ b/publication.html
@@ -26,6 +26,7 @@
 			</ol>
 			<h3>Conferences (Peer Reviewed)</h3>
 			<ol>
+				<li>Y. Hara-Azumi, H. Osawa, and <ins>T. Ahmed</ins>, "<b>Architectural Approach on Approximate Computing for Media Processing</b>", <i>International Symposium on Nonlinear Theory and Its Application (NOLTA)</i>, pp. xxx.-yyy, Yugawara, Japan, Nov. 2016. <b>(Invited Paper)</b></li>
 				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Design Space Exploration of Flexible Heterogeneous Dual-Core Processor using MIPS and Extended OISC: A Case Study</b>", <i>1st Workshop on Resource Awareness and Application Auto-tuning in Adaptive and Heterogeneous Computing (RES4ANT) (Co-located with DATE'16)</i>, pp. xxx.-yyy, Dresden, Germany, Mar. 2016.</li>
 				<li><ins>T. Ahmed</ins>, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "<b>Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC</b>", <i>IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC)</i>, pp. 114-123, Proto, Portugal, Oct. 2015.</li>
 				<li>Y. Hara-Azumi, <ins>T. Ahmed</ins>, T. Azumi, and N. D. Dutt, "<b>Instruction-Set Extension of Embedded Microprocessor for Timing Speculation</b>", <i>International Conference on Integrated Circuits, Design, and Verification (ICDV)</i>, pp. 67-72, Ho chi Minh City, Vietnam, Aug. 2015. <b>(Invited Paper)</b></li>
