page number is updated

--- a/publication.html
+++ b/publication.html
@@ -27,7 +27,7 @@
 			<h3>Conferences (Peer Reviewed)</h3>
 			<ol>
 				<li>Y. Hara-Azumi, H. Osawa, and <ins>T. Ahmed</ins>, "<b>Architectural Approach on Approximate Computing for Media Processing</b>", <i>International Symposium on Nonlinear Theory and Its Application (NOLTA)</i>, pp. xxx.-yyy, Yugawara, Japan, Nov. 2016. <b>(Invited Paper)</b></li>
-				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Design Space Exploration of Flexible Heterogeneous Dual-Core Processor using MIPS and Extended OISC: A Case Study</b>", <i>1st Workshop on Resource Awareness and Application Auto-tuning in Adaptive and Heterogeneous Computing (RES4ANT) (Co-located with DATE'16)</i>, pp. xxx.-yyy, Dresden, Germany, Mar. 2016.</li>
+				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Design Space Exploration of Flexible Heterogeneous Dual-Core Processor using MIPS and Extended OISC: A Case Study</b>", <i>1st Workshop on Resource Awareness and Application Auto-tuning in Adaptive and Heterogeneous Computing (RES4ANT) (Co-located with DATE'16)</i>, pp. 5-6, Dresden, Germany, Mar. 2016.</li>
 				<li><ins>T. Ahmed</ins>, N. Sakamoto, J. Anderson, and Y. Hara-Azumi, "<b>Synthesizable-from-C Embedded Processor Based on MIPS-ISA and OISC</b>", <i>IEEE/IFIP International Conference on Embedded and Ubiquitous Computing (EUC)</i>, pp. 114-123, Proto, Portugal, Oct. 2015.</li>
 				<li>Y. Hara-Azumi, <ins>T. Ahmed</ins>, T. Azumi, and N. D. Dutt, "<b>Instruction-Set Extension of Embedded Microprocessor for Timing Speculation</b>", <i>International Conference on Integrated Circuits, Design, and Verification (ICDV)</i>, pp. 67-72, Ho chi Minh City, Vietnam, Aug. 2015. <b>(Invited Paper)</b></li>
 				<li><ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Timing Speculation-Aware Instruction Set Extension for Resource Constrained Embedded Systems</b>", <i>IEEE International Conference on Application-specific Systems, Architectures, and Processors (ASAP)</i>, pp. 30-34, Toronto, Canada, Jul. 2015.</li>
@@ -38,7 +38,7 @@
 			</ol>
 			<h3>Conferences (Not-Peer Reviewed)</h3>
 			<ol>
-				<li>K. Zenba, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Fast and Simple Netlist-level Fault-Injection Framework on FPGA</b>", <i>IEEE Symposium on Low-Power and High-Speed Chips (COOL CHIPS XIX)</i>, pp. xxx-yyy. Yokohama, Japan, Apr. 2016.</li>
+				<li>K. Zenba, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Fast and Simple Netlist-level Fault-Injection Framework on FPGA</b>", <i>IEEE Symposium on Low-Power and High-Speed Chips (COOL CHIPS XIX)</i>, pp. 1-2. Yokohama, Japan, Apr. 2016.</li>
 				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, and Y. Hara-Azumi, "<b>Extension of One-Instruction-Set Computer and Its Evaluation</b>", <i>IEICE Technical Report</i>, Vol. 115, No. 88, VLD2015-11, pp. 19-24, Jun. 2015. <b>(Japanese)</b></li>
 				<li>S. Sugiyama, <ins>T. Ahmed</ins>, and Y. Hara-Azumi, "<b>Implementation and Evaluation of Architecture using Lookup Table for Approximate Computing</b>", <i>IEICE Technical Report</i>, Vol. 114, No. 476, VLD2014-183, pp. 171-176, Mar. 2015. <b>(Japanese)</b></li>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>Achieving Near-Optimial Dependability with Minimal Hardware Costs in an FU Array Processor by Soft Error Rate Monitoring</b>", <i>IIPSJ SIG Notes</i>, 2012-ARC-201(19), pp. 1-6, Aug. 2012.</li>
