--- a/cv.html
+++ b/cv.html
@@ -37,8 +37,11 @@
 			</p>
 			<h2>Employment</h2>
 			<p>
+				<b>SBI BITS Co. Ltd.</b><br>
+				<b>Platform Acceleration Architect, Strategic Software Development (Apr. 2016 - Aug. 2016)</b><br>
+				I work on all phases of FPGA development including high level system architecture, RTL implementation, implementation strategies, floor planning, and related software development for efficient hardware implementation. Currently, I am involved in developing a novel financial risk analysis architecture for FPGA, and providing API for the software developer to access the FPGA resource. I am applying several architectural techniques to overcome the physical limitations of FPGA (such as maximum use of DSP block, applying proper pipelineing). In addition to these, I am also working on developing a framework which convert the legacy C/C++ application for the Altera OpenCL SDK. <br><br>
 				<b>Tokyo Institute of Technology</b><br>
-				<b>Researcher, Dept. of Communications and Computer Engineering (Apr. 2014-Till Date)</b><br>
+				<b>Researcher, Dept. of Communications and Computer Engineering (Apr. 2014 - Apr. 2016)</b><br>
 				Work on two different research direction: (1) design and implementation of energy efficient and low cost embedded processor. The processor is described in C language, which cab be synthesized by any commercial or open-source HLS tools. I explore efficient C coding style to produce small and energy efficient circuits. In addition to that different architectural techniques are also taken into for smaller and low power design; (2) investigating efficient hardware and software techniques to detect and recover both permanent and timing faults. These techniques covers a wide range of processor architectrues such as small scale embedded processor, high-end commercial processor, and reconfigurable processor.<br><br>
 				<b>Nara Institute of Science and Technology</b><br>
 				<b>Research Assitant, Graduate School of Information Science (Jun. 2011 - Mar. 2014)</b><br>
