new head is added

--- a/research.html
+++ b/research.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
-			tanvira@cad.ce.titech.ac.jp</h2>
+        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
+			tanvira@ieee.org</h2>
 		<p><b>Area and Energy Efficient Embedded Processor</b>
 		</p>
 		<p>
