--- a/cv.html
+++ b/cv.html
@@ -19,8 +19,8 @@
 		<div class="container">
 		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
-			tanvira@cad.ce.titech.ac.jp</h2>
+        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
+			tanvira@ieee.org</h2>
 
 
 			<p></p>
