--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Hara Lab, Tokyo Institute of Technology<br>
-			tanvira@cad.ce.titech.ac.jp</h2>
+        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
+			tanvira@ieee.org</h2>
 		<p>I will join the Computer System Laboratory at <a href="http://www.fujitsu.com/jp/group/labs/en/" target="_blank">Fujitsu Laboratories Ltd</a>. in Sept. 2016, and currently I am a Visiting Researcher at <a href="http://www.cad.ce.titech.ac.jp" target="_blank">Hara Laboratory</a> in <a href="http://www.titech.ac.jp/english/index.html" target="_blank">Tokyo Institute of Technology</a>. I was briefly working as a Platform Acceleration Architect at <a href="http://sbibits.com" target="_blank">SBI BITS</a> to develop a FPGA based trading system, and before that I was a full time Researcher at Prof. Yuko Hara-Azumi's Lab at Tokyo Institute of Technology.</p>
 		<p>I graduated from <a href="http://www.naist.jp/en/" target="_blank">Nara Institute of Science and Technology</a> in March 2014. Before that I was at <a href="http://www.liu.se/?l=en" target="_blank">Linkpoing University</a> for M.Sc. in Electrical Engineering. Here is my <a href="/cv.html">CV</a>.</p>
 			<p>My research interests lie in the broad areas of computer architecture and embedded system, with particular focus on the development of accelerator and small-scale processor for next generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power and performance aware accelerator, embedded system design, worst-case delay optimization in circuit, architecture, and software level, as well as scheduling and resource management. Here is the list of <a href="/publication.html">publication</a>.</p>
