new review service is added

--- a/cv.html
+++ b/cv.html
@@ -69,7 +69,8 @@
 			<h3>Reviewer</h3>
 			<p>Journal</p>
 			<ul style="list-style-type:square">
-				<li>ACM Transaction of Reconfigurable Technology and Systems
+				<li>IEEE Embedded System Letters</li>
+				<li>ACM Transaction of Reconfigurable Technology and Systems</li>
 				<li>ACM Transaction of Embedded Computing Systems</li>
 				<li>IEICE Transaction on Fundamentals</li>
 			</ul>
