fujitsu info is added

--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
 		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvira@ieee.org</h2>
+			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
 
 
 			<p></p>
@@ -37,6 +37,9 @@
 			</p>
 			<h2>Employment</h2>
 			<p>
+				<b>Fujitsu Laboratories Ltd.</b><br>
+				<b>Researcher, Computer System Lab. (Since Sep. 2016)</b><br>
+				Working on the next generation computing project, in which I am involve in the architectural aspect of the overall system, hardware and software interfaces to achieve significant performance improvement in the post moore era. The system include dedicated and reconfigurable accelerators, and I am also involved in developing the proper tool chain to interact with the hardware at the application development time. <br><br>
 				<b>Tokyo Institute of Technology</b><br>
 				<b>Visiting Researcher, Dept. of Communications and Computer Engineering (Since Apr. 2016)</b><br>
 				Work on developing reliable and ultra low power processor architecture to detect different types of fault (permanent, timing, and transient) on-the-fly. Different software and hardware techniques are applied to compensate the effect of fault on the performance, circuit area, and power consumption. Besides, I am also working with some of Prof. Yuko Hara-Azumi’s students on different hardware and software projects on approximate computing.<br><br>
