--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvira@ieee.org</h2>
+			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
 		<p><b>Area and Energy Efficient Embedded Processor</b>
 		</p>
 		<p>
