--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvira@ieee.org</h2>
+			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
 			<p>
 			Send me email at <a href="mailto:tanvira@cad.ce.titech.ac.jp">tanvira@cad.ce.titech.ac.jp</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can find me in South Building 3, room 318 at Tokyo Institute of Technology. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too.
 			</p>
