--- a/publication.html
+++ b/publication.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvira@ieee.org</h2>
+			tanvir.ahmed@jp.fujitsu,com, tanvira@ieee.org</h2>
 			<h3>Journals</h3>
 			<ol>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under a Radiation Stress Test by Using SDC Prediction</b>", <i>IEEE Transaction on Nuclear Science</i>, Vol. 61, Issue 4, pp 1567-1574, Aug. 2014.</li>
