contact info is added

--- a/contact.html
+++ b/contact.html
@@ -20,23 +20,23 @@
         		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
 			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
 			<p>
-			Send me email at <a href="mailto:tanvira@cad.ce.titech.ac.jp">tanvira@cad.ce.titech.ac.jp</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can find me in South Building 3, room 318 at Tokyo Institute of Technology. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too.
+			Send me email at <a href="mailto:tanvir.ahmed@jp.fujitsu.com">tanvir.ahmed@jp.fujitsu.com</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>.
 			</p>
 			<p>
 			<b>Mailing Address:</b><br>
-			S3-50, 2-12-1 Ookayama<br>
-			Meguro-Ku, Tokyo 152-8550<br>
+			4-1-1 Kamikodanaka<br>
+			Nakahara-ku, Kawasaki, Kanagawa 211-8588<br>
 			Japan
 			</p>
 			<p>
-			<b>Phone/Fax:</b> +81-3-5734-2914</br>
+			<b>Phone/Fax:</b> +81-44-754-2613</br>
 			<b>Mobile:</b> +81-80-3769-5229</br>
 			</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:tanvira@cad.ce.titech.ac.jp">email</a></li>
+        		<li><a href="mailto:tanvira@ieee.org">email</a></li>
         		<li><a href="https://github.com/tanvir-a">github.com/tanvir-a</a></li>
 			</ul>
 		</footer>
