Fix the newer version

--- a/publication.html
+++ b/publication.html
@@ -21,6 +21,7 @@
 			tanvir.ahmed@jp.fujitsu,com, tanvira@ieee.org</h2>
 			<h3>Journals</h3>
 			<ol>
+				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, Y. Hara-Azumi, "<b>Subleq<sub>O</sub>: An Area-Efficient Two-Instruction-Set Computer</b>", <i>IEEE Embedded Systems Letters</i>, Vol. xx, Issue xx, pp xxx-yyy, XXX. 2017. (Accepted)</li>
 				<li><ins>T. Ahmed</ins>, J. Yao, and Y. Nakashima, "<b>A Two-Order Increase in Robustness of Partial Redundancy under a Radiation Stress Test by Using SDC Prediction</b>", <i>IEEE Transaction on Nuclear Science</i>, Vol. 61, Issue 4, pp 1567-1574, Aug. 2014.</li>
 				<li><ins>T. Ahmed</ins>, J. Yao, Y. Hara-Azumi, S. Yamashita, and Y. Nakashima, "<b>Selective Check of Data-Path for Effective Fault Tolerance</b>", <i>IEICE Transaction of Information and Systems (Special Section on Reconfigurable Systems)</i>, Vol, E96-D, No. 8, pp. 1592-1601, Aug. 2013.</li>
 			</ol>
