email address is fixed

--- a/publication.html
+++ b/publication.html
@@ -50,7 +50,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:tanvira@cad.ce.titech.ac.jp">email</a></li>
+        		<li><a href="mailto:tanvira@ieee.org">email</a></li>
         		<li><a href="https://github.com/tanvir-a">github.com/tanvir-a</a></li>
 			</ul>
 		</footer>
