--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@ In practice, most ISA extension works extract a sequence of instructions and rep
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:tanvira@cad.ce.titech.ac.jp">email</a></li>
+        		<li><a href="mailto:tanvira@ieee.org">email</a></li>
         		<li><a href="https://github.com/tanvir-a">github.com/tanvir-a</a></li>
 			</ul>
 		</footer>
