--- a/cv.html
+++ b/cv.html
@@ -79,7 +79,7 @@
 			</ul>
 			<p>Conference</p>
 			<ul style="list-style-type:square">
-				<li>2017 Design Automation Conference (DATE)</li>
+				<li>2017 Design Automation Conference (DAC)</li>
 				<li>2016 Design Automation and Test in Europe (DATE)</li>
 				<li>26th IEEE International Conference on Application-Specific systems, Architectures and Processors (ASAP)</li>
 				<li>2015 International Symposium on VLSI Design, Automation and Test (VLSI-DAT)</li>
