--- a/contact.html
+++ b/contact.html
@@ -17,19 +17,19 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
+        		<h2>Researcher @ Preferred Networks, Inc.<br>
+			tanvira@preferred.jp</h2>
 			<p>
-			Send me email at <a href="mailto:tanvir.ahmed@jp.fujitsu.com">tanvir.ahmed@jp.fujitsu.com</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>.
+			Send me email at <a href="mailto:tanvira@preferred.jp">tanvira@preferred.jp</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>.
 			</p>
 			<p>
 			<b>Mailing Address:</b><br>
-			4-1-1 Kamikodanaka<br>
-			Nakahara-ku, Kawasaki, Kanagawa 211-8588<br>
+			Otemachi Bldg. 2F, 1-6-1 Otemachi<br>
+			Chiyoda-Ku, Tokyo 100-0004<br>
 			Japan
 			</p>
 			<p>
-			<b>Phone/Fax:</b> +81-44-754-2613</br>
+			<b>Phone/Fax:</b> +81-3-6206-3441</br>
 			<b>Mobile:</b> +81-80-3769-5229</br>
 			</p>
     		</div><!-- /.blurb -->
