updated the mail address

--- a/cv.html
+++ b/cv.html
@@ -19,8 +19,8 @@
 		<div class="container">
 		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
+        		<h2>Researcher @ Preferred Networks, Inc.<br>
+			tanvira@preferred.jp, tanvira@ieee.org</h2>
 
 
 			<p></p>
@@ -37,9 +37,12 @@
 			</p>
 			<h2>Employment</h2>
 			<p>
+				<b>Preferred Networks, Inc.</b><br>
+				<b>Researcher (Jun. 2016 - Feb. 2016)</b><br>
+				I am part of the hardware research team to explore the efficient hardware architecture for the deep neural network. The target to the hardware accelerator is to out perfrom the execution time of deep neural network training over GPU. The initial plan is to eqqiped the accelerator in a large scale computing platform to accelerate the training for deep neural network. In addition, I am also exploring ultra-low-power architectrue for deep neural network.<br><br>
 				<b>Fujitsu Laboratories Ltd.</b><br>
-				<b>Researcher, Computer System Lab. (Since Jun. 2016)</b><br>
-				I have been researching on the novel architecture for solving the optimization problems. In particular I am focusing the architectural aspects of the overall system and prototype on a reconfigurable computing platform such as FPGA, different design techniques have been used to extract the optimal performance from the system such as, memory partitioning, reseouce interleaving, floor planning, efficient resource utilization. I am also collaborating with the software implementation team to efficiently map a large problem on the hardware. In addition, I am exploring different applciations which are suffereing from speedup in the classical computers. For example, database, search engine, and optimizing large network connectivity. <br><br>
+				<b>Researcher, Computer System Lab. (Jun. 2016 - Feb. 2016)</b><br>
+				I researched on the novel architecture for solving the optimization problems. In particular, I was focusing the architectural aspects of the overall system and prototype on a reconfigurable computing platform such as FPGA, different design techniques have been used to extract the optimal performance from the system such as, memory partitioning, reseouce interleaving, floor planning, efficient resource utilization. I was also collaborating with the software implementation team to efficiently map a large problem on the hardware. In addition, I was exploring different applciations which are suffereing from speedup in the classical computers. For example, database, search engine, and optimizing large network connectivity. <br><br>
 				<b>Tokyo Institute of Technology</b><br>
 				<b>Visiting Researcher, Dept. of Communications and Computer Engineering (Jun. 2016 - Mar. 2017)</b><br>
 				Worked on developing the reliable and ultra low power processor architectures to detect different types of fault (permanent, timing, and transient) on-the-fly. Different software and hardware techniques were applied to compensate the effect of fault on the performance, circuit area, and power consumption. Besides, I was also working with some of Prof. Yuko Hara-Azumi’s students on different hardware and software projects on approximate computing.<br><br>
@@ -51,6 +54,14 @@
 				<b>Linkoping University</b><br>
 				<b>Master Thesis Student, Dept. of Electrical Engineering (Oct. 2010 - May 2011)</b><br>
 				Worked on implementing a high-throughput and low power FFT processors on ASIC for wireless communication applications. Different optimization techniques (both architectural and implementation) have been applied to meet the timing and power constraints
+			</p>
+			<h2>Visiting Research Position</h2>
+			<p>
+				<b>Tokyo Institute of Technology</b><br>
+				<b>Visiting Researcher, Dept. of Communications and Computer Engineering (Mar. 2018)</b><br>
+				Worked on developing framework for exploring many-core architecture targeting for the low machine learning applications. The framework is able to explore varioius configuration of processor, as well as able to generate the hardware code for syntehsis and tool-chain. In addition, effect of faults of fault on the deep learning accelerators are expolored.<br><br>
+				<b>Visiting Researcher, Dept. of Communications and Computer Engineering (Jun. 2016 - Mar. 2017)</b><br>
+				Worked on developing the reliable and ultra low power processor architectures to detect different types of fault (permanent, timing, and transient) on-the-fly. Different software and hardware techniques were applied to compensate the effect of fault on the performance, circuit area, and power consumption. Besides, I was also working with some of Prof. Yuko Hara-Azumi’s students on different hardware and software projects on approximate computing.<br><br>
 			</p>
 			<h2>Publication</h2>
 			<p>List of publication can be found <a href="/publication.html">here</a>.</p>
