--- a/publication.html
+++ b/publication.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvir.ahmed@jp.fujitsu,com, tanvira@ieee.org</h2>
+        		<h2>Researcher @ Preferred Networks, Inc.<br>
+			tanvira@preferred.jp, tanvira@ieee.org</h2>
 			<h3>Journals</h3>
 			<ol>
 				<li>N. Sakamoto, <ins>T. Ahmed</ins>, J. Anderson, Y. Hara-Azumi, "<b>Subleq<sub>O</sub>: An Area-Efficient Two-Instruction-Set Computer</b>", <i>IEEE Embedded Systems Letters</i>, Vol. xx, Issue xx, pp xxx-yyy, XXX. 2017. (Accepted)</li>
