--- a/research.html
+++ b/research.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Fujitsu Laboratories Ltd<br>
-			tanvir.ahmed@jp.fujitsu.com, tanvira@ieee.org</h2>
+        		<h2>Researcher @ Preferred Networks, Inc.<br>
+			tanvira@preferred.jp.fujitsu, tanvira@ieee.org</h2>
 		<p><b>Area and Energy Efficient Embedded Processor</b>
 		</p>
 		<p>
