--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Tanvir Ahmed</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/index.html">Home</a></li>
-        		<li><a href="/research.html">Research</a></li>
+  <head>
+    <title>Tanvir Ahmed</title>
+    <!-- link to main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/research.html">Research</a></li>
         		<li><a href="/cv.html">CV</a></li>
         		<li><a href="/contact.html">Contact</a></li>
     		</ul>
@@ -19,9 +19,15 @@
         		<h1>Tanvir Ahmed</h1>
         		<h2>Researcher @ Preferred Networks, Inc.<br>
 			tanvira@preferred.jp, tanvira@ieee.org</h2>
-		<p>I am working as a Researcher in <a href="https://www.preferred-networks.jp/en" target="_blank">Preferred Networks, Inc</a>. since Apr. 2018. At PFN, I am exploring hardware architecture and related tool chains for deep neural network and other related technologies. Prior to join PFN, I have spent several years in <a href="http://www.fujitsu.com/jp/group/labs/en/" target="_blank">Fujitsu Laboratories Ltd</a> and </a> in <a href="http://www.titech.ac.jp/english/index.html" target="_blank">Tokyo Institute of Technology</a> researching high performance and energy efficient architectures, accelerators, and compiler technologies for machine learning, IoT, and etc.</p>
-		<p>I graduated from <a href="http://www.naist.jp/en/" target="_blank">Nara Institute of Science and Technology</a> in March 2014. Before that I was at <a href="http://www.liu.se/?l=en" target="_blank">Linkpoing University</a> for M.Sc. in Electrical Engineering. Here is my <a href="/cv.html">CV</a>.</p>
-			<p>My research interests lie in the broad areas of computer architecture and embedded system, with particular focus on the development of accelerator and small-scale processor for next generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power and performance aware accelerator, embedded system design, worst-case delay optimization in circuit, architecture, and software level, as well as scheduling and resource management. Here is the list of <a href="/publication.html">publication</a>.</p>
+
+			<p>I am working as a Researcher in <a href="https://www.preferred-networks.jp/en" target="_blank">Preferred Networks, Inc</a>. since Apr. 2018. At PFN, I am exploring hardware architecture and related toolchains for deep neural network and other related technologies. Prior to joining PFN, I have spent several years in <a href="http://www.fujitsu.com/jp/group/labs/en/" target="_blank">Fujitsu Laboratories Ltd</a> and in <a href="http://www.titech.ac.jp/english/index.html" target="_blank">Tokyo Institute of Technology</a> researching high performance and energy efficient architectures, accelerators, and compiler technologies for machine learning, IoT, and etc.</p>
+
+			<p>I graduated from <a href="http://www.naist.jp/en/" target="_blank">Nara Institute of Science and Technology</a> in March 2014. Before that, I was at <a href="http://www.liu.se/?l=en" target="_blank">Linkpoing University</a> for M.Sc. in Electrical Engineering. Here is my <a href="/cv.html">CV</a>.</p>
+
+
+			<p>My research interests lie in the broad areas of computer architecture and embedded system, with a particular focus on the development of accelerator and a small-scale processor for next-generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power, and performance-aware accelerator, embedded system design, worst-case delay optimization in the circuit, architecture, and software level, as well as scheduling and resource management. Here is the list of <a href="/publication.html">publication</a>.</p>
+
+
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
