update for edgecortix

--- a/cv.html
+++ b/cv.html
@@ -19,8 +19,8 @@
 		<div class="container">
 		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Preferred Networks, Inc.<br>
-			tanvira@preferred.jp, tanvira@ieee.org</h2>
+        		<h2>Senior Research Scientist @ EdgeCortix, Inc.<br>
+			tanvira@edgecortix.com, tanvira@ieee.org</h2>
 
 
 			<p></p>
@@ -36,9 +36,14 @@
 				Thesis: High Level Model of IEEE 802.15.3c Standard and Implementation of a Suitable FFT on ASIC
 			</p>
 			<h2>Employment</h2>
+			</p>
+				<b>EdgeCortix, Inc.</b><br>
+				<b>Senior Research Scientist (Since Aug. 2021)</b><br>
+				I am exploring highly reconfigurable accelerator architecture and related technologies for machine learning applications.
+			<p>
 			<p>
 				<b>Preferred Networks, Inc.</b><br>
-				<b>Researcher (Jun. 2016 - Feb. 2016)</b><br>
+				<b>Researcher (Apr. 2018 - Aug. 2021)</b><br>
 				I am part of the hardware research team to explore the efficient hardware architecture for the deep neural network. The target to the hardware accelerator is to out perfrom the execution time of deep neural network training over GPU. The initial plan is to eqqiped the accelerator in a large scale computing platform to accelerate the training for deep neural network. In addition, I am also exploring ultra-low-power architectrue for deep neural network.<br><br>
 				<b>Fujitsu Laboratories Ltd.</b><br>
 				<b>Researcher, Computer System Lab. (Jun. 2016 - Feb. 2016)</b><br>
