--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Preferred Networks, Inc.<br>
-			tanvira@preferred.jp, tanvira@ieee.org</h2>
-
-			<p>I am working as a Researcher in <a href="https://www.preferred-networks.jp/en" target="_blank">Preferred Networks, Inc</a>. since Apr. 2018. At PFN, I am exploring hardware architecture and related toolchains for deep neural network and other related technologies. Prior to joining PFN, I have spent several years in <a href="http://www.fujitsu.com/jp/group/labs/en/" target="_blank">Fujitsu Laboratories Ltd</a> and in <a href="http://www.titech.ac.jp/english/index.html" target="_blank">Tokyo Institute of Technology</a> researching high performance and energy efficient architectures, accelerators, and compiler technologies for machine learning, IoT, and etc.</p>
-
-			<p>I graduated from <a href="http://www.naist.jp/en/" target="_blank">Nara Institute of Science and Technology</a> in March 2014. Before that, I was at <a href="http://www.liu.se/?l=en" target="_blank">Linkpoing University</a> for M.Sc. in Electrical Engineering. Here is my <a href="/cv.html">CV</a>.</p>
+        		<h2>Senior Research Scientist @ EdgeCortix, Inc.<br>
+			tanvira@edgecortix.com, tanvira@ieee.org</h2>
+			<p>I am working as a Senior Research Scientist at <a href="https://www.edgecortix.com/" target="_blank">EdgeCortix, Inc</a>. since Aug. 2021. At EdgeCortix, I am exploring highly reconfigurable hardware architecture and related technologies for machine learning. Prior to joining EdgeCortix, I have spent several years in <a href="https://www.preferred-networks.jp/en" target="_blank">Preferred Networks, Inc</a>, and <a href="http://www.fujitsu.com/jp/group/labs/en/" target="_blank">Fujitsu Laboratories Ltd</a>. I also spent two years as a Postdoctoral researcher at <a href="http://www.titech.ac.jp/english/index.html" target="_blank">Tokyo Institute of Technology</a>. Most of my previous experiences and current works are solving different aspects of processor or accelerator architecture, and compiler technologies.</p> 
 
 
-			<p>My research interests lie in the broad areas of computer architecture and embedded system, with a particular focus on the development of accelerator and a small-scale processor for next-generation application, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) fault tolerance, power, and performance-aware accelerator, embedded system design, worst-case delay optimization in the circuit, architecture, and software level, as well as scheduling and resource management. Here is the list of <a href="/publication.html">publication</a>.</p>
+			<p>I graduated from <a href="http://www.naist.jp/en/" target="_blank">Nara Institute of Science and Technology</a> in March 2014. Before that, I got an M.Sc. in Electrical Engineering from <a href="http://www.liu.se/?l=en" target="_blank">Linkoping University</a>. Details about my educational background and employment history can be found <a href="/cv.html">here</a>.</p>
+
+			<p>My research interests lie in the broad areas of computer architecture and embedded systems, with a particular focus on the development of accelerators, and small-scale processors for next-generation applications, with the consideration of reliability, power, and computation efficiency. The various topics I am interested in include (but not limited to) power and performance-aware accelerators and processor architecture for machine learning, approximate computing in the circuit, architecture, and software level. Here is the list of <a href="/publication.html">publications</a>.</p>
+
 
 
     		</div><!-- /.blurb -->
