update the contact

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Tanvir Ahmed</h1>
-        		<h2>Researcher @ Preferred Networks, Inc.<br>
-			tanvira@preferred.jp</h2>
+        		<h2>Senior Research Scientist @ EdgeCortix, Inc.<br>
+			tanvira@edgecortix.com, tanvira@ieee.org</h2>
 			<p>
-			Send me email at <a href="mailto:tanvira@preferred.jp">tanvira@preferred.jp</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>.
+			Send me email at <a href="mailto:tanvira@edgecortix.com">tanvira@edgecortix.com</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>.
 			</p>
 			<p>
 			<b>Mailing Address:</b><br>
