update the contact

--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<title>Tanvir Ahmed (contacts)</title>
-	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
-    </head>
-    <body>
-		<nav>
-    		<ul>
-        		<li><a href="/index.html">Home</a></li>
-        		<li><a href="/research.html">Research</a></li>
-        		<li><a href="/cv.html">CV</a></li>
-        		<li><a href="/contact.html">Contact</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Tanvir Ahmed</h1>
-        		<h2>Senior Research Scientist @ EdgeCortix, Inc.<br>
-			tanvira@edgecortix.com, tanvira@ieee.org</h2>
-			<p>
-			Send me email at <a href="mailto:tanvira@edgecortix.com">tanvira@edgecortix.com</a> or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too. I share my projects on <a href="github.com/tanvir-a" target="_blank">GitHub</a>.
-			</p>
-			<p>
-			<b>Mailing Address:</b><br>
-			Otemachi Bldg. 2F, 1-6-1 Otemachi<br>
-			Chiyoda-Ku, Tokyo 100-0004<br>
-			Japan
-			</p>
-			<p>
-			<b>Phone/Fax:</b> +81-3-6206-3441</br>
-			<b>Mobile:</b> +81-80-3769-5229</br>
-			</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:tanvira@ieee.org">email</a></li>
-        		<li><a href="https://github.com/tanvir-a">github.com/tanvir-a</a></li>
-			</ul>
-		</footer>
-	</body>
+  <head>
+    <title>Tanvir Ahmed (contacts)</title>
+    <!-- link to main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/research.html">Research</a></li>
+        <li><a href="/cv.html">CV</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+      <div class="blurb">
+        <h1>Tanvir Ahmed</h1>
+        <h2>Research @ Tokyo Institute of Technology<br>
+          tanvira@ieee.org</h2>
+        <p>
+        Send me email at or <a href="mailto:tanvira@ieee.org">tanvira@ieee.org</a>. You can contact me on <a href="https://www.linkedin.com/profile/view?id=AAMAAAdJ7YoBdpGJosSxyztrknE3VQXJ98Oq-WI&trk=hp-identity-name" target="_blank">Linkedin</a> too.
+        </p>
+        <p>
+        <b>Mailing Address:</b><br>
+        S3-50, 2-12-1 Ookayama<br>
+        Meguro, Tokyo 152-8552<br>
+        Japan
+        </p>
+      </div><!-- /.blurb -->
+    </div><!-- /.container -->
+    <footer>
+      <ul>
+        <li><a href="mailto:tanvira@ieee.org">email</a></li>
+        <li><a href="https://github.com/tanvir-a">github.com/tanvir-a</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
