--- a/index.html
+++ b/index.html
@@ -66,89 +66,41 @@
         </div>
 
         <div class="collapse navbar-collapse">
-
           <ul class="nav navbar-nav navbar-right">
-
-
             <li class="nav-item">
               <a href="./#about" data-target="#about">
-
                 <span>Home</span>
               </a>
             </li>
 
-
             <li class="nav-item">
               <a href="./#publications" data-target="#publications">
-
                 <span>Publications</span>
-              </a>
-            </li>
-
-
-
-            <li class="nav-item">
-              <a href="./#talks" data-target="#talks">
-
-                <span>Talks</span>
-              </a>
-            </li>
-
-
-            <li class="nav-item">
-              <a href="./#industry" data-target="#industry">
-
-                <span>Industry</span>
-              </a>
-            </li>
-
-
-
-            <li class="nav-item">
-              <a href="./#posts" data-target="#posts">
-
-                <span>Posts</span>
               </a>
             </li>
 
             <li class="nav-item">
               <a href="./#projects" data-target="#projects">
-
                 <span>Projects</span>
               </a>
             </li>
 
 
             <li class="nav-item">
-              <a href="./#teaching" data-target="#teaching">
-
-                <span>Teaching</span>
-              </a>
-            </li>
-
-
-            <li class="nav-item">
               <a href="./#contact" data-target="#contact">
-
                 <span>Contact</span>
               </a>
             </li>
 
-
           </ul>
-
         </div>
       </div>
     </nav>
 
-
-
     <span id="homepage" style="display: none"></span>
-
 
     <section id="about" class="home-section">
       <div class="container">
-
         <div class="row" itemprop="author" itemscope itemtype="http://schema.org/Person" itemref="person-email">
           <div class="col-xs-12 col-md-4">
             <div id="profile">
@@ -160,21 +112,15 @@
               -->
 
               <div class="portrait-title">
-                <h2 itemprop="name">Tanvir</h2>
+                <h2 itemprop="name">Tanvir Ahmed</h2>
                 <h3 itemprop="jobTitle">Researcher at School of Engineering</h3>
-
                 <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-
                   <span itemprop="name">Tokyo Institute of Technology</span>
-
                 </h3>
-
               </div>
 
               <link itemprop="url" href="https://tanvir-a.github.io/">
-
               <ul class="social-icon" aria-hidden="true">
-
 
                 <li>
                   <a itemprop="sameAs" href="mailto:tanvira@ieee.org" target="_blank">
@@ -182,35 +128,25 @@
                   </a>
                 </li>
 
-
-                <!--
                 <li>
-                  <a itemprop="sameAs" href="//twitter.com/srivas_nitish" target="_blank">
+                  <a itemprop="sameAs" href="//twitter.com/tanh449" target="_blank">
                     <i class="fa fa-twitter big-icon"></i>
                   </a>
                 </li>
-                -->
 
 
-                <!--
                 <li>
-                  <a itemprop="sameAs" href="https://scholar.google.com/citations?hl=en&amp;user=JSQgIsQAAAAJ" target="_blank">
+                  <a itemprop="sameAs" href="https://scholar.google.com/citations?user=VREey50AAAAJ&hl=en" target="_blank">
                     <i class="ai ai-google-scholar big-icon"></i>
                   </a>
                 </li>
-                -->
 
-
-                <!--
                 <li>
-                  <a itemprop="sameAs" href="//github.com/nitish2112" target="_blank">
+                  <a itemprop="sameAs" href="//github.com/tanvir-a" target="_blank">
                     <i class="fa fa-github big-icon"></i>
                   </a>
                 </li>
-                -->
-
               </ul>
-
             </div>
           </div>
           <div class="col-xs-12 col-md-8" itemprop="description">
