--- a/index.html
+++ b/index.html
@@ -127,13 +127,16 @@
                     <i class="fa fa-envelope big-icon"></i>
                   </a>
                 </li>
-
+                <li>
+                  <a itemprop="sameAs" href="//www.linkedin.com/in/tanvir-ahmed-062b5334" target="_blank">
+                    <i class="fa fa-linkedin big-icon"></i>
+                  </a>
+                </li>
                 <li>
                   <a itemprop="sameAs" href="//twitter.com/tanh449" target="_blank">
                     <i class="fa fa-twitter big-icon"></i>
                   </a>
                 </li>
-
 
                 <li>
                   <a itemprop="sameAs" href="https://scholar.google.com/citations?user=VREey50AAAAJ&hl=en" target="_blank">
