initial commit for employment history

--- a/index.html
+++ b/index.html
@@ -169,26 +169,20 @@
 
             <div class="row">
 
-
               <div class="col-sm-5">
                 <h3>Interests</h3>
                 <ul class="ul-interests">
-
-                  <li>Computer Architecture</li>
-
-                  <li>High Level Synthesis</li>
-
-                  <li>VLSI</li>
-
+                  <li>Computer architecture</li>
+                  <li>Reconfigurable accelerator</li>
+                  <li>Hardware software co-design</li>
+                  <li>Machine learning for electronic design automation</li>
                 </ul>
               </div>
-
 
 
               <div class="col-sm-7">
                 <h3>Education</h3>
                 <ul class="ul-edu fa-ul">
-
                   <li>
                     <i class="fa-li fa fa-graduation-cap"></i>
                     <div class="description">
@@ -196,7 +190,6 @@
                       <p class="institution">Nara Institute of Science and Technology</p>
                     </div>
                   </li>
-
                   <li>
                     <i class="fa-li fa fa-graduation-cap"></i>
                     <div class="description">
@@ -204,12 +197,20 @@
                       <p class="institution">Linkoping University</p>
                     </div>
                   </li>
-
                 </ul>
               </div>
-
-
             </div>
+          </div>
+          <div class="row">
+            <h3>Research and Industry Experiences</h3>
+            <ul class="ul-edu fa-ul">
+              <li>
+                <i></i>
+                <div class="description">
+                  <p class="course"> Researcher at Tokyo institute of technology, (since May 2022)</p>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
 
