--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
                   <li>Machine learning for electronic design automation</li>
                 </ul>
               </div>
+            </div>
 
-
-              <div class="col-sm-7">
+            <div class="row">
+              <div class="col-sm-5">
                 <h3>Education</h3>
                 <ul class="ul-edu fa-ul">
                   <li>
@@ -202,15 +203,17 @@
             </div>
           </div>
           <div class="row">
-            <h3>Research and Industry Experiences</h3>
-            <ul class="ul-edu fa-ul">
-              <li>
-                <i></i>
-                <div class="description">
-                  <p class="course"> Researcher at Tokyo institute of technology, (since May 2022)</p>
-                </div>
-              </li>
-            </ul>
+            <div class="col-sm-5">
+              <h3>Research and Industry Experiences</h3>
+              <ul class="ul-edu fa-ul">
+                <li>
+                  <i></i>
+                  <div class="description">
+                    <p class="course"> Researcher at Tokyo institute of technology, (since May 2022)</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
 
