revert back to the old

--- a/index.html
+++ b/index.html
@@ -175,12 +175,10 @@
                   <li>Computer architecture</li>
                   <li>Reconfigurable accelerator</li>
                   <li>Hardware software co-design</li>
-                  <li>Machine learning for electronic design automation</li>
+                  <li>Machine learning for EDA</li>
                 </ul>
               </div>
-            </div>
 
-            <div class="row">
               <div class="col-sm-5">
                 <h3>Education</h3>
                 <ul class="ul-edu fa-ul">
