--- a/index.html
+++ b/index.html
@@ -153,22 +153,17 @@
             </div>
           </div>
           <div class="col-xs-12 col-md-8" itemprop="description">
-
-
-
             <h1 id="biography">Biography</h1>
-
-            <!--
-            <p>I am a software engineer in the edge TPU group at Google. I completed my Ph.D. at Cornell University where I developed domain-specific language, T2S-Tensor, to productively generate high-performance accelerators for dense tensor computations and a domain-specific hardware, Tensaurus, to accelerate mixed sparse-dense tensor computations. I was advised by <a href="http://www.csl.cornell.edu/~albonesi/" target="_blank">Prof. David Albonesi</a> and <a href="http://www.csl.cornell.edu/~zhiruz/" target="_blank">Prof. Zhiru Zhang</a>. Before coming to Cornell, I obtained my Bachelor of Technology degree in Electrical Engineering from Indian Institute of Technology, Kanpur, where I was awarded with the President&rsquo;s Gold Medal. You can find my CV <a href="home/CV.pdf" target="_blank">here</a>.</p>
-            -->
-
-            <!--
-            <p>I am interested in re-thinking algorithm, language and hardware design to accelerate sparse and dense tensor algebra.</p>
-            -->
-
+            <p>I am a researcher in the School of Engineering at Tokyo Institute of Technology and a memory of Hara laboratory. My research interests are in the broad aspects of computer systems, focusing on high performance, energy efficiency, and reliability of general-purpose computer architectures, domain-specific accelerators, and highly reconfigurable architectures. Recently, I became interested in machine learning for electronic design automation (EDA) optimization.
+            </p>
+            <p>
+            Before joining TokyoTech, I spent several years in industries (Fujitsu laboratories ltd, Preferred Networks, Inc., and Edgecortix, Inc.), where I was involved in designing and developing machine learning and neuromorphic accelerators. 
+            </p>
+            <p>
+            My Resume/CV
+            </p>
 
             <div class="row">
-
               <div class="col-sm-7">
                 <h3>Interests</h3>
                 <ul class="ul-interests">
@@ -200,6 +195,7 @@
               </div>
             </div>
 
+            <!--
             <div class="col-sm-5">
               <h3>Research and Industry Experiences</h3>
               <ul class="ul-edu fa-ul">
@@ -211,6 +207,7 @@
                 </li>
               </ul>
             </div>
+            -->
 
 
           </div>
