--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="about" class="home-section">
       <div class="container">
         <div class="row" itemprop="author" itemscope itemtype="http://schema.org/Person" itemref="person-email">
-          <div class="col-xs-12 col-md-4">
+          <div class="col-xs-10 col-md-4">
             <div id="profile">
 
 
@@ -164,13 +164,13 @@
             </p>
 
             <div class="row">
-              <div class="col-sm-7">
+              <div class="col-sm-5">
                 <h3>Interests</h3>
                 <ul class="ul-interests">
-                  <li>Computer architecture</li>
-                  <li>Reconfigurable accelerator</li>
+                  <li>Domain specific accelerator (machine learning)</li>
+                  <li>Reconfigurable architecture (FPGA and CGRA)</li>
                   <li>Hardware software co-design</li>
-                  <li>Machine learning for EDA</li>
+                  <li>Machine learning for compiler and EDA optimization</li>
                 </ul>
               </div>
 
