--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
             <div id="profile">
 
 
-              <!--
-              <div class="portrait" style="background-image: url('https://nitish2112.github.io/img/portrait.jpg');"></div>
-              <meta itemprop="image" content="https://nitish2112.github.io/img/portrait.jpg">
-              -->
+              <div class="portrait" style="background-image: url('https://tanvir-a.github.io/image/tanvir.png');"></div>
+              <meta itemprop="image" content="https://tanvir-a.github.io/image/tanvir.png">
 
               <div class="portrait-title">
                 <h2 itemprop="name">Tanvir Ahmed</h2>
