--- a/index.html
+++ b/index.html
@@ -93,13 +93,11 @@
     </nav>
 
     <span id="homepage" style="display: none"></span>
-
     <section id="about" class="home-section">
       <div class="container">
         <div class="row" itemprop="author" itemscope itemtype="http://schema.org/Person" itemref="person-email">
           <div class="col-xs-10 col-md-4">
             <div id="profile">
-
 
               <div class="portrait" style="background-image: url('https://tanvir-a.github.io/image/tanvir.png');"></div>
               <meta itemprop="image" content="https://tanvir-a.github.io/image/tanvir.png">
@@ -188,21 +186,6 @@
               </div>
             </div>
 
-            <!--
-            <div class="col-sm-5">
-              <h3>Research and Industry Experiences</h3>
-              <ul class="ul-edu fa-ul">
-                <li>
-                  <i></i>
-                  <div class="description">
-                    <p class="course"> Researcher at Tokyo institute of technology, (since May 2022)</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            -->
-
-
           </div>
         </div>
 
@@ -217,6 +200,12 @@
         <div class="row">
           <div class="col-xs-10 col-md-4 section-heading">
             <h1>Publications</h1>
+            <p class="view-all">
+            <a href="/publication/">
+              More Publications
+              <i class="fa fa-angle-double-right">
+            </a>
+            </p>
 
           </div>
           <div class="col-xs-10 col-md-8">
