fixed missing colon

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <p class="view-all">
             <a href="/publication/">
               More Publications
-              <i class="fa fa-angle-double-right">
+              <i class="fa fa-angle-double-right"></i>
             </a>
             </p>
 
