add patent section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             </li>
 
             <li class="nav-item">
+              <a href="./#patents" data-target="#patents">
+                <span>Patents</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a href="./#contact" data-target="#contact">
                 <span>Contact</span>
               </a>
@@ -206,7 +212,6 @@
               <i class="fa fa-angle-double-right"></i>
             </a>
             </p>
-
           </div>
           <div class="col-xs-10 col-md-8">
 
@@ -292,6 +297,8 @@
     </section>
 
 
+    <section id="patents" class="home-section">
+    </section>
 
 
     <section id="contact" class="home-section">
