--- a/index.html
+++ b/index.html
@@ -298,6 +298,13 @@
 
 
     <section id="patents" class="home-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-10 col-md-4 section-heading">
+            <h1> Patents</h1>
+          </div>
+        </div>
+      </div>
     </section>
 
 
