add the paper symbol

--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
                   </div>
                   -->
 
+                  <li itemscope itemtype="http://schema.org/ScholarlyArticle">
+                    <i class="fa-li fa fa-file-text-o pub-icon" aria-hidden="true"></i>
+
                   <span style="font-size:85%" class="pub-authors">
 
                     <span itemprop="author" itemscope itemtype="http://schema.org/Person">
