remove pub-icon

--- a/index.html
+++ b/index.html
@@ -213,28 +213,15 @@
             </a>
             </p>
           </div>
-          <div class="col-xs-12 col-md-8">
+          <div class="col-xs-10 col-md-8">
 
             <div class="pub-list-item" itemscope itemtype="http://schema.org/CreativeWork">
               <div class="row">
                 <div class="col-md-12">
-                  <!--
-                  <h3 class="article-title" itemprop="name">
-                    <a href="https://nitish2112.github.io/publication/dissertation/" itemprop="url">Design and Generation of Efficient Hardware Accelerators for Sparse and Dense Tensor Computations</a>
-                  </h3>
-                  -->
-                  <!--
-                  <div class="pub-abstract" itemprop="text">
-                  </div>
-
-                  <div class="pub-authors" itemprop="author">
-                    Tanvir Ahmed
-                  </div>
-                  -->
 
                   <ul class="fa-ul">
                     <li itemscope itemtype="http://schema.org/ScholarlyArticle">
-                      <i class="fa-li fa fa-file-text-o pub-icon" aria-hidden="true"></i>
+                      <i class="fa-li fa fa-file-text-o" aria-hidden="true"></i>
 
                       <span style="font-size:85%" class="pub-authors">
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
