to check german u

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                           <span itemprop="name">T. Ahmed</span>
                         </span>, 
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-                          <span itemprop="name">J. M. Kuhn</span>
+                          <span itemprop="name">J. M. K&#252;hn</span>
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">K. Namura</span>
@@ -346,7 +346,7 @@
                         </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">T. Ahmed</span>
-                        </span>
+                        </span>,
                         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                           <span itemprop="name">W. Luk</span>
                         </span>
